Fixed misalignment of caret icons in Selects

--- a/src/modules/core/components/MembersList/SortingRow/SortingRow.css
+++ b/src/modules/core/components/MembersList/SortingRow/SortingRow.css
@@ -16,10 +16,12 @@
 }
 
 .sortingIcon {
-  align-self: center;
+  display: flex;
   margin-left: 8px;
-  height: 10px;
+  height: 100%;
   width: 10px;
+  position: relative;
+  top: 2px;
   fill: var(--temp-grey-blue-7);
 }
 
